# Programming

./: Students.txt
Applet/: app.java  index.html
C/: temp  temp.c
CPP/: CMakeLists.txt  database  database.cpp  dup_arr  dup_arr.cpp  mean  mean.cpp  median  median.cpp  mode  mode.cpp  switch  switch.cpp  temp  temp.c  temp.cpp  triangle  triangle.cpp
CPP/Sem3Practical/: fibbonachi  fibbonachi.cpp  freq  freq.cpp  gcd  gcd.cpp  gen_seq  gen_seq.cpp  hanoi  hanoi.cpp  int_to_char  int_to_char.cpp  matrix  matrix.cpp  pascals_triangle  pascals_triangle.cpp  prime_sum  prime_sum.cpp  recur_fact  recur_fact.cpp  recur_sum  recur_sum.cpp  rem_dupe  rem_dupe.cpp  reversedigit  reversedigit.cpp  sort_arr  sort_arr.cpp  str  str.cpp  swap  swap.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Go/: temp.go
Java/: Practice.java  temp.java
Java/Applet/: app.java  index.html
Java/Programs/: Capitalize.java  FactForLoop.java  HalfPyramid.java  Multiplication.java  StreamToStr.java  SumRecursion.java  calculator.java  compStr.java  evenOdd.java  factRecur.java  fibbonacci.java  fibbonacciFor.java  index.html  invertHalfPyramid.java  maxIfElse.java  primecheck.java  reverseNum.java
Java/Swing/: swg.java
Python/: area.py  classes.ipynb  namesplit.ipynb  nmethods.ipynb  override.ipynb  stud.py  temp.ipynb  temp.py
Python/Pyhon/: aalu.py
Python/Pyhon/Chimpanzee/: __init__.py  bbhello.py
Python/Pyhon/Practice/: Student.py  abs_polygon.py  scratch.ipynb
Site/: db.php  home.php  login.php  reg.php  style.css  update.php
Web/: index.html  index.xml  style.css
